--- a/campus_CU/ex.env
+++ b/campus_CU/ex.env
@@ -1,13 +1,9 @@
 #Versions
 CADDY_VERSION=2.7.6-alpine
-PROMETHEUS_VERSION=v2.47.2
-GRAFANA_VERSION=grafana/grafana-oss:10.2.3
 PORTAINER_VERSION=2.27.0-alpine
-CLOUDFLARED_VERSION=2024.6.0
-TURN_VERSION=4.5.2-alpine
 #Réseau
-#HOST_IP=192.168.0.100
-#DOCKER_HOST_ADDRESS=192.168.0.100  # IP LOCALE de la machine
+#HOST_IP=
+#DOCKER_HOST_ADDRESS=  # IP LOCALE de la machine
 HOST_IP=172.0.0.1
 #DOCKER_HOST_ADDRESS=172.0.0.1  # IP LOCALE de la machine
 LOCAL_DOMAIN=campus-cu.local
@@ -19,18 +15,18 @@ REALM=campus-cu.com
 #==============================================
 #Rocketchat
 ROCKETCHAT_VERSION=6.4.2-alpine
-ROCKETCHAT_ADMIN=DominicSavio
-ROCKETCHAT_ADMIN_PASSWORD=}B.Q_wdg3;4)9d2
-ROCKETCHAT_ADMIN_EMAIL=sesikasacretodavidsaviola@gmail.com
+ROCKETCHAT_ADMIN=
+ROCKETCHAT_ADMIN_PASSWORD=
+ROCKETCHAT_ADMIN_EMAIL=
 #IP
 PUBLIC_DOMAIN=campus-cu.com
 PORT_DOMAIN=3000
 #Mongo
 MONGO_VERSION=4.4.29
-MONGO_ROOT=savio
-MONGO_ROOT_PASSWORD=CampusSaviola
-MONGO_USER=rocketchat
-MONGO_PASSWORD=UnMotDePasseFort123
+MONGO_ROOT=
+MONGO_ROOT_PASSWORD=
+MONGO_USER=
+MONGO_PASSWORD=
 
 #========================================
 #Portainer
@@ -43,8 +39,8 @@ PORTAINER_HTTPS_PORT=9443
 # Données persistantes
 #PORTAINER_DATA=./portainer_data
 # Admin user (sera créé automatiquement)
-PORTAINER_ADMIN=admin
-PORTAINER_PASSWORD=MonSuperMotDePasse123
+PORTAINER_ADMIN=
+PORTAINER_PASSWORD=
 
 
 # Basic configuration options
@@ -104,26 +100,26 @@ ENABLE_AUTH=0
 # Enable guest access (if authentication is enabled, this allows for users to b>
 ENABLE_GUESTS=1
 # XMPP password for Jicofo client connections
-JICOFO_AUTH_PASSWORD=4faeb0ef7542ac07d86541fa008c8875
+JICOFO_AUTH_PASSWORD=
 
 # XMPP password for JVB client connections
-JVB_AUTH_PASSWORD=1225ebcb913b96ebec74d6ff80419296
+JVB_AUTH_PASSWORD=
 
 # XMPP password for Jigasi MUC client connections
-JIGASI_XMPP_PASSWORD=8d498c00a7394da00228c51a10abbe4c
+JIGASI_XMPP_PASSWORD=
 
 # XMPP password for Jigasi transcriber client connections
-JIGASI_TRANSCRIBER_PASSWORD=a0a09331774ed8f2afc2c72c0f243b43
+JIGASI_TRANSCRIBER_PASSWORD=
 
 # XMPP recorder password for Jibri client connections
-JIBRI_RECORDER_PASSWORD=c4a69925238654d1920e73fa7f17a6f6
+JIBRI_RECORDER_PASSWORD=
 
 # XMPP password for Jibri client connections
-JIBRI_XMPP_PASSWORD=77e8e0a11ea741f649b56f5f5934e842
+JIBRI_XMPP_PASSWORD=
 
 # Container restart policy
 RESTART_POLICY=unless-stopped
 
 # Jitsi image version (useful for local development)
-JITSI_IMAGE_VERSION=stable-8922
+JITSI_IMAGE_VERSION=stable-latest
 
